_sass/views/index.scss
.home {
    p a { color: $orange; }
    &__header {
        position: relative;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        height: 70vh;
        color: white;
        background-color: $orange;
        border-bottom: 2em solid $orange-dark;
        text-align: center;

        @include media($on-mobile) {
            padding: 0 2em;
        }

        .flint-logo {
            margin-bottom: 1em;
            fill: white;
        }

        &__btns {
            position: absolute;
            bottom: 2.6em;

            @include media($on-mobile) {
                bottom: 2em;
            }
        }

        &__npm {
            position: relative;
            font-family: monospace;
            padding: 1em 4em;
            background-color: $grey-dark;
            border-radius: 5px;

            &::before {
                content: '';
                position: absolute;
                bottom: 100%;
                left: 50%;
                transform: translateX(-50%);
                @include triangle(top, 6px, $grey-dark);
            }
        }

        &__title {
            margin: 0 0 2em;
            opacity: 0.6;
        }
    }
    
    .section {
        &__title {
            margin-top: 0;
            font-size: 1.6em;
            color: $orange;
        }

        &--one {
            display: flex;
            align-items: stretch;
            justify-content: center;
            padding: 3em 0;

            @include media($on-mobile) {
                align-items: center;
                flex-direction: column;
            }

            .card {
                color: $grey;
                text-align: center;
                line-height: 1.4;
                max-width: 500px;
                &:last-of-type { margin-left: 2em; }

                @include media($on-mobile) {
                    width: 90%;
                    padding: 1em;

                    &:last-of-type { margin-left: 0; margin-top: 1em; }
                }
            }
        }

        &--two {
            position: relative;
            display: flex;
            overflow: hidden;
            align-items: center;
            justify-content: center;
            padding: 100px 0;

            @include media($on-mobile) {
                flex-direction: column;
                width: 90%;
                margin: 0 auto;
                text-align: center;
                padding: 1em 0;

                &::after { display: none; }
            }

            &__text {
                font-size: 1.2rem;
                max-width: 500px;
                margin-right: 4em;
                line-height: 1.4;

                @include media($on-laptop) {
                    font-size: 1rem;
                    margin: 1em 0 0;
                    order: 2;
                }
            }
            
            img {
                animation-name: float;
                animation-duration: 2s;
                animation-iteration-count: infinite;
                animation-direction: alternate;
                animation-timing-function: ease-in-out;

                @include media($on-mobile) {
                    display: none;
                }
            }

            &::after {
                position: absolute;
                content: '';
                top: 120px;
                left: -100px;
                width: 150%;
                height: 400px;
                background-color: darken($grey-lighter, 5%);
                transform: rotate(3deg);
                z-index: -1;

                @include media($on-laptop) {
                    transform: rotate(5deg);
                }
            }
        }

        &--three {
            display: flex;
            flex-direction: column;
            align-items: center;
            justify-content: center;
            padding-bottom: 4em;

            @include media($on-mobile) {
                max-width: 90%;
                margin: 0 auto;
            }

            &__text {
                max-width: 500px;
                text-align: center;
                line-height: 1.4;
            }

            &__logos {
                display: flex;
                align-items: center;
                margin-top: 1em;

                a:not(:first-child) { margin-left: 3em; }

                @include media($on-mobile) {
                    a {
                        width: 50%;
                        text-align: center;
                        &:not(:first-child) { margin-left: 0; }

                        img { max-width: 100%; }
                    }
                    flex-wrap: wrap;
                }
            }
        }

        &--four {
            &__controls {
                display: flex;
                align-items: center;
                justify-content: center;

                .js-home-btn {
                    display: flex;
                    justify-content: center;
                    position: relative;
                    box-sizing: border-box;
                    padding: 1em;
                    border: none;
                    background: none;
                    cursor: pointer;
                    outline: none;

                    &:not(:first-child) { margin-left: 2em; }

                    svg { fill: $grey; width: 1.4em; height: 1.4em; }

                    &:hover { svg { fill: $orange; } }

                    &.is-active {
                        svg { fill: $orange; }

                        &::before, &::after {
                            content: '';
                            position: absolute;
                            z-index: 2;
                            left: 50%;
                            transform: translateX(-50%);
                        }

                        &::after {
                            bottom: -1px;
                            @include triangle(top, 8px, darken($grey-lighter, 5%));
                        }

                        &::before {
                            bottom: 0px;
                            @include triangle(top, 8px, darken($grey-light, 7%));
                        }
                    }
                }
            }

            .js-home-block {
                position: absolute;
                display: flex;
                top: 50%;
                left: 50%;
                width: 1024px;
                margin: 0 auto;
                align-items: flex-start;
                justify-content: center;
                opacity: 0;
                transform: translate(-50%, -50%);
                transition: opacity 200ms $exit;
                transition-delay: 0;
                visibility: hidden;


                @include media($on-mobile) {
                    flex-direction: column;
                    align-items: center;
                    text-align: center;
                    width: 90%;
                }

                .section--four__block__text {
                    margin-right: 3em;

                    @include media($on-mobile) { margin-right: 0; }
                }

                &.is-active {
                    opacity: 1;
                    visibility: visible;
                    transition-delay: 50ms;
                    transition-timing-function: $enter;
                }

                img {
                    animation-name: float;
                    animation-duration: 2s;
                    animation-iteration-count: infinite;
                    animation-direction: alternate;
                    animation-timing-function: ease-in-out;

                    @include media($on-mobile) {
                        max-width: 100%;
                    }
                }

                &:nth-child(odd) {
                    img { order: -1; }

                    .section--four__block__text {
                        margin-right: 0;
                        margin-left: 3em;

                        @include media($on-mobile) { margin-left: 0; }
                    }
                }
            }

            &__block {
                &__text {
                    max-width: 420px;

                    h3 {
                        font-size: 1.6em;
                        margin-top: 3em;

                        @include media($on-mobile) { margin-top: 1em; }
                    }

                    a { color: black; text-decoration: none; }
                }
            }

            &__content {
                position: relative;
                background-color: darken($grey-lighter, 5%);
                min-height: 500px;
                padding: 2em 0;
                border-top: 1px solid $grey-light;
                color: $grey;

                @include media($on-mobile) { min-height: 400px; }
            }
        }
    }
}

@keyframes float {
    0% { transform: translate3d(0,-4px,0); }
    100% { transform: translate3d(0,4px,0); }
}

